# ButlerDuck

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-ecr.yaml  deploy-to-ecs.yml  ecr-image-push.yml
deployment/: butlerbot-task-definition.json
src/: .dockerignore  Dockerfile  db.py  evaluate.py  handler.py  llm.py  logger.py  main.py  requirements.txt  tool_function.py  tools.json  tools.py
tools/: evaluate.py  tools.json
