[project]
name = "butlerbot"
version = "0.1.0"
description = "ButlerBot is an LLM bot to be your personal assistant."
authors = [
    { name = "Song Meo", email = "songmeo@pm.me" }
]
dependencies = [
    "annotated-types~=0.7.0",
    "anyio~=4.7.0",
    "certifi~=2024.8.30",
    "distro~=1.9.0",
    "exceptiongroup~=1.2.2",
    "h11~=0.14.0",
    "httpcore~=1.0.7",
    "httpx~=0.28.1",
    "idna~=3.10",
    "jiter~=0.8.0",
    "openai~=1.57.1",
    "psycopg2-binary~=2.9.7",
    "pydantic~=2.10.3",
    "pydantic-core~=2.27.1",
    "python-dotenv~=1.0.1",
    "python-telegram-bot~=21.7",
    "sniffio~=1.3.1",
    "tqdm~=4.67.1",
    "typing-extensions~=4.12.2",
    "isodate>=0.7.2",
]
readme = "README.md"
requires-python = ">=  3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '''
(src/.*\.pyi?$)
|
(noxfile.py$)
'''
# --------------------------------------------------  PYTEST  --------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/"]
python_files = "*.py"
python_functions = "_test_*"
log_level = "DEBUG"
log_cli_level = "WARNING"
log_cli = true
log_file = "pytest.log"
addopts = "--doctest-modules -v"
asyncio_mode = "auto"

# -------------------------------------------------- COVERAGE --------------------------------------------------
[tool.coverage.run]
data_file = ".coverage"
branch    = true
parallel  = true

# --------------------------------------------------  MYPY  --------------------------------------------------
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_context = true
mypy_path = []

ignore_missing_imports = true
